# bw-native

./: .gitignore  Cargo.toml  HANDOFF.md  SUMMARY.md
src/: main.rs
src/auth/: crypto.rs  device_trust.rs  errors.rs  mod.rs  models.rs  server.rs  sso.rs  vault.rs  workflow.rs
src/ui/: login_controller.rs  mod.rs
ui/: app-window.slint
