[package]
name = "bw-native"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
base64 = "0.22.1"
pbkdf2 = "0.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
slint = "1.15.0"
uuid = { version = "1.18.1", features = ["v4"] }

[build-dependencies]
slint-build = "1.15.0"
